<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:htext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kantai.midtermexam.MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/bootstrap_brand_danger"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription=""
                app:srcCompat="@mipmap/ic_launcher" />

            <com.hanks.htextview.HTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/mainTitle"
                android:textColor="@color/bootstrap_brand_secondary_fill"
                android:textSize="20dp"
                htext:animateType="typer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/toolbar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/toolbar_button"
                app:bootstrapBrand="warning"
                app:bootstrapSize="lg"
                app:buttonMode="regular"
                app:roundedCorners="true"
                app:showOutline="false" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="0.6"
                android:onClick="videoClick">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:scaleType="centerCrop"
                    htext:srcCompat="@drawable/rurumi" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="2dp"
                    android:alpha="0.8"
                    android:background="@color/bootstrap_gray"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/main_news_top_left"
                    android:textSize="24dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:onClick="newsClick"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/bootstrap_gray_light"
                        android:scaleType="centerCrop"
                        android:src="@drawable/rurumi1" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:alpha="0.8"
                        android:background="@color/bootstrap_gray"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="2dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/main_news_top_right_top" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/bootstrap_gray_light"
                        android:scaleType="centerCrop"
                        android:src="@drawable/rurumi2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:alpha="0.8"
                        android:background="@color/bootstrap_gray"
                        android:ellipsize="marquee"
                        android:focusable="true"
                        android:gravity="center"
                        android:padding="2dp"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/main_news_top_right_bottom" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="newsClick">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bootstrap_gray_light"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rurumi3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.8"
                    android:background="@color/bootstrap_gray"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="2dp"
                    android:scrollHorizontally="true"
                    android:text="@string/main_news_bottom_left" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="newsClick">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bootstrap_gray_light"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rurumi4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.8"
                    android:background="@color/bootstrap_gray"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="2dp"
                    android:scrollHorizontally="true"
                    android:text="@string/main_news_bottom_mid" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:onClick="newsClick">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/bootstrap_gray_light"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rurumi5" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:alpha="0.8"
                    android:background="@color/bootstrap_gray"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:padding="2dp"
                    android:scrollHorizontally="true"
                    android:text="@string/main_news_bottom_right" />
            </RelativeLayout>

        </LinearLayout>

        <com.roughike.bottombar.BottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:bb_behavior="shifting"
            app:bb_showShadow="true"
            app:bb_tabXmlResource="@xml/bottombar_tabs" />

    </LinearLayout>

</LinearLayout>